--- a/index.html
+++ b/index.html
@@ -222,8 +222,9 @@
       <h2>Как до нас добраться</h2>
       <!-- Здесь будет карта -->
     </section>
-
-    <footer class="footer">
+  </main>
+  <footer class="footer">
+    <div class="container">
       <section class="footer-social">
         <h2>Как нас найти</h2>
         <ul class="social-list">
@@ -265,36 +266,34 @@
         </p>
         <p class="copyright-link">Сделано в <a href="https://htmlacademy.ru/"> HTML Academy</a>© 2021</p>
       </section>
-    </footer>
+    </div>
+  </footer>
 
 
-    <!--Попап Обратная связь-->
+  <!--Попап Обратная связь-->
 
-    <section class="popup-feedback">
-      <h2>Обратная связь</h2>
-      <p>Мы обязательно вам ответим!</p>
-      <form class="popup-feedback-form" action="https://echo.htmlacademy.ru" method="POST">
-        <p class="popup-feedback-list">
-          <label for="name-surname"> ФИО: </label>
-          <input type="text" name="name-surname" id="name-surname" placeholder="Имя Фамилия">
-        </p>
-        <p class="popup-feedback-list">
-          <label for="email"> Электронная почта: </label>
-          <input type="email" name="email" id="email" placeholder="email@example.com">
-        </p>
-        <p class="popup-feedback-list">
-          <label for="comments">Комментарий: </label>
-          <textarea name="comments" id="comments" cols="42" rows="15" placeholder="В свободной форме"></textarea>
-        </p>
-        <p>
-          <button class="button button-popup-feedback" type="submit">Отправить</button>
-        </p>
-      </form>
-      <button type="button">Закрыть</button>
-    </section>
-
-
-  </main>
+  <section class="popup-feedback">
+    <h2>Обратная связь</h2>
+    <p>Мы обязательно вам ответим!</p>
+    <form class="popup-feedback-form" action="https://echo.htmlacademy.ru" method="POST">
+      <p class="popup-feedback-list">
+        <label for="name-surname"> ФИО: </label>
+        <input type="text" name="name-surname" id="name-surname" placeholder="Имя Фамилия">
+      </p>
+      <p class="popup-feedback-list">
+        <label for="email"> Электронная почта: </label>
+        <input type="email" name="email" id="email" placeholder="email@example.com">
+      </p>
+      <p class="popup-feedback-list">
+        <label for="comments">Комментарий: </label>
+        <textarea name="comments" id="comments" cols="42" rows="15" placeholder="В свободной форме"></textarea>
+      </p>
+      <p>
+        <button class="button button-popup-feedback" type="submit">Отправить</button>
+      </p>
+    </form>
+    <button type="button">Закрыть</button>
+  </section>
 
 </body>
 
