--- a/catalog.html
+++ b/catalog.html
@@ -14,33 +14,36 @@
 <body class="page-body inner-page">
     <header class="main-header">
         <div class="container">
-            <nav class="main-navigation">
-                <a class="main-header-logo"><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
-                <ul class="site-navigation site-navigation-wrapper">
-                    <li>
-                        <a class="site-navigation-link" href="catalog.html"> Каталог</a>
-                        <!--<ul class="site-navigation site-navigation-inner">
+            <nav class="main-navigation-wrapper">
+                <div class="main-navigation-inner">
+                    <div class="main-header-logo">
+                        <a><img src="images/logo.svg" width="154" height="64" alt="CllacyShop"></a>
+                    </div>
+                    <ul class="site-navigation site-navigation-wrapper">
+                        <li>
+                            <a class="site-navigation-link" href="catalog.html"> Каталог</a>
+                            <!--<ul class="site-navigation site-navigation-inner">
                   <li><a href="#">Новинки</a></li>
                   <li><a href="#">Сливочное</a></li>
                   <li><a href="#">Щербеты</a></li>
                   <li><a href="#">Фруктовый лед</a></li>
                   <li><a href="#">Мелорин</a></li>
                 </ul>-->
-                    </li>
-                    <li>
-                        <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
-                    </li>
-                    <li>
-                        <a class="site-navigation-link" href="blank.html">О компании</a>
-                    </li>
-                </ul>
+                        </li>
+                        <li>
+                            <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
+                        </li>
+                        <li>
+                            <a class="site-navigation-link" href="blank.html">О компании</a>
+                        </li>
+                    </ul>
 
 
-                <div class="user-navigation">
                     <div class="user-navigation-wrapper">
-                        <div class="search-wrapper">
-                            <a class="search-link" href="#">Поиск</a>
-                            <!--<form action="https://echo.htmlacademy.ru" method="POST">
+                        <div class="user-navigation-inner">
+                            <div class="search-wrapper user-navigation">
+                                <a class="search-link" href="#">Поиск</a>
+                                <!--<form action="https://echo.htmlacademy.ru" method="POST">
                     <p>
                       <label>
                         Поиск
@@ -49,11 +52,10 @@
                     </p>
                     <button class="visually-hidden" type="submit">Поиск</button>
                   </form> -->
-                        </div> <!-- search-wrapper-->
-
-                        <div class="login-wrapper">
-                            <a class=" login-link user-text" href="#">Вход</a>
-                            <!--<form action="https://echo.htmlacademy.ru" method="POST">
+                            </div> <!-- search-wrapper-->
+                            <div class="login-wrapper user-navigation">
+                                <a class=" login-link user-text" href="#">Вход</a>
+                                <!--<form action="https://echo.htmlacademy.ru" method="POST">
                     <p>
                       <label for="login-login"> Логин </label>
                       <input type="email" name="email" id="login-login" placeholder="email@example.com">
@@ -68,33 +70,32 @@
                       <a href="#">Новая регистрация</a>
                     </p>
                   </form> -->
+                            </div>
+                            <!--login-wrapper-->
+                            <div class="basket user-navigation">
+                                <p>
+                                    <a href="#"> Пусто</a>
+                                </p>
+                            </div>
+                            <!--basket-->
                         </div>
-                        <!--login-wrapper-->
-
-                        <div class="basket">
-                            <p>
-                                <a href="#"> Пусто</a>
-                            </p>
-                        </div>
-                        <!--basket-->
                     </div>
                 </div>
-
-                <ul class="breadcrumbs">
-                    <li><a href="index.html">Главная</a></li>
-                    <li><a href="catalog.html">Каталог</a></li>
-                    <li><a>Сливочное</a></li>
-                </ul>
-
-                <div class="time-work">
-                    <p> с 10 до 20, ежедневно</p>
-                    <p>
-                        <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a>
-                    </p>
+                <div class="time-work-wrapper">
+                    <ul class="breadcrumbs">
+                        <li><a href="index.html">Главная</a></li>
+                        <li><a href="catalog.html">Каталог</a></li>
+                        <li><a>Сливочное</a></li>
+                    </ul>
+                    <div class="time-work">
+                        <p> с 10 до 20, ежедневно</p>
+                        <p>
+                            <a class="number-link" href="tel:+7812452525">8 812 450-25-25</a>
+                        </p>
+                    </div>
                 </div>
-
-
             </nav>
+
         </div>
         <!--container-->
     </header>
