--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <ul class="site-navigation site-navigation-wrapper">
             <li>
               <a class="site-navigation-link" href="catalog.html"> Каталог</a>
-              <!--<ul class="site-navigation site-navigation-inner">
-              <li><a href="#">Новинки</a></li>
-              <li><a href="#">Сливочное</a></li>
-              <li><a href="#">Щербеты</a></li>
-              <li><a href="#">Фруктовый лед</a></li>
-              <li><a href="#">Мелорин</a></li>
-            </ul>-->
+              <ul class="site-navigation-inner">
+                <li><a href="#">Новинки</a></li>
+                <li><a href="#">Сливочное</a></li>
+                <li><a href="#">Щербеты</a></li>
+                <li><a href="#">Фруктовый лед</a></li>
+                <li><a href="#">Мелорин</a></li>
+              </ul>
             </li>
             <li>
               <a class="site-navigation-link" href="blank.html">Доставка и оплата</a>
@@ -43,7 +43,7 @@
             <div class="user-navigation-inner">
               <div class="search-wrapper user-navigation">
                 <a class="search-link" href="#">Поиск</a>
-                <!--<form action="https://echo.htmlacademy.ru" method="POST">
+                <form class="visually-hidden" action="https://echo.htmlacademy.ru" method="POST">
                 <p>
                   <label>
                     Поиск
@@ -51,11 +51,11 @@
                   </label>
                 </p>
                 <button class="visually-hidden" type="submit">Поиск</button>
-              </form> -->
+              </form> 
               </div> <!-- search-wrapper-->
               <div class="login-wrapper user-navigation">
                 <a class=" login-link user-text" href="#">Вход</a>
-                <!--<form action="https://echo.htmlacademy.ru" method="POST">
+                <form class="visually-hidden" action="https://echo.htmlacademy.ru" method="POST">
                 <p>
                   <label for="login-login"> Логин </label>
                   <input type="email" name="email" id="login-login" placeholder="email@example.com">
@@ -69,7 +69,7 @@
                   <a href="#">Забыли пароль?</a>
                   <a href="#">Новая регистрация</a>
                 </p>
-              </form> -->
+              </form> 
               </div>
               <!--login-wrapper-->
               <div class="basket user-navigation">
@@ -96,51 +96,53 @@
   </header>
 
   <main class="container">
-    <h1>Магазин мороженого </h1>
+    <h1 class="visually-hidden">Магазин мороженого </h1>
 
     <div class="slider">
+      <div class="slider-one slide slide-current">
+        <h2 class="slider-title">Крем-брюле и пломбир с малиновым джемом</h2>
+        <p>
+          <a class="button" href="#"> Давай оба!</a>
+        </p>
+      </div>
+      <div class="slider-two slide">
+        <h2 class="slider-title">Шоколадный пломбир и лимонный сорбет</h2>
+        <p>
+          <a class="button" href="#"> Давай оба!</a>
+        </p>
+      </div>
+      <div class="slider-three slide">
+        <h2 class="slider-title">Пломбир с помадкой и клубничный щербет</h2>
+        <p>
+          <a class="button" href="#"> Давай оба!</a>
+        </p>
+      </div>
       <div class="slider-control">
         <button type="button" class="control">Первый слайд</button>
         <button type="button" class="control">Второй слайд</button>
         <button type="button" class="control">Третий слайд</button>
       </div>
-      <div class="slider-one">
-        <h2>Крем-брюле и пломбир с малиновым джемом</h2>
-        <p>
-          <a class="button" href="#"> Давай оба!</a>
-        </p>
-      </div>
-      <div class="slider-two">
-        <h2>Шоколадный пломбир и лимонный сорбет</h2>
-        <p>
-          <a class="button" href="#"> Давай оба!</a>
-        </p>
-      </div>
-      <div class="slider-three">
-        <h2>Пломбир с помадкой и клубничный щербет</h2>
-        <p>
-          <a class="button" href="#"> Давай оба!</a>
-        </p>
-      </div>
     </div> <!-- slider-->
 
     <section class="special-offer-wrapper">
-      <h2>Специальные предложения </h2>
+      <h2 class="visually-hidden">Специальные предложения </h2>
       <div class="special-offer special-offer-rasberries">
-        <h3>Малинка Даром!</h3>
-        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="button special-offer-button" href="#">Хочу варенье!</a>
+        <h3 class="special-offer-title">Малинка Даром!</h3>
+        <p class="special-offer-info">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку
+          малинового варенья бесплатно.</p>
+        <a class="button special-offer-button" href="#">Хочу варенье!</a>
       </div>
       <div class="special-offer special-offer-chocolate">
-        <h3>Шоколадки даром!</h3>
-        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
+        <h3 class="special-offer-title">Шоколадки даром!</h3>
+        <p class="special-offer-info">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной
+          присыпки совершенно бесплатно.
         </p>
-          <a class="button special-offer-button" href="#">Хочу шоколадки!</a>
+        <a class="button special-offer-button" href="#">Хочу шоколадки!</a>
       </div>
     </section>
 
     <section class="seller">
-      <h2> Хиты продаж </h2>
+      <h2 class="visually-hidden"> Хиты продаж </h2>
       <ul class="seller-list">
         <li class="seller-item"><a href="#">
             <p class="seller-link">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
@@ -178,23 +180,28 @@
     </section>
 
     <section class="features container">
-      <h3>Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+      <h3 class="features-title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного
+        производства на развес</h3>
       <ul class="features-list">
         <li class="features-item">
-          <p> Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования
+          <p class="features-item-info"> Все наше мороженое изготавливается на собственном производстве, с
+            использованием современного оборудования
             и проверенных временем технологий.</p>
         </li>
         <li class="features-item">
-          <p> Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас
+          <p class="features-item-info"> Закупка ингредиентов производится только у проверенных фермерских хозяйств и
+            компаний, с которыми нас
             связывает долговременное сотрудничество.</p>
         </li>
         <li class="features-item">
-          <p> Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все
+          <p class="features-item-info"> Для приготовления мороженого используются настоящие сливки и молоко высочайшего
+            качества. Все
             дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
         </li>
 
         <li class="features-item">
-          <p> Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает
+          <p class="features-item-info"> Доставка нашего мороженого до заказчиков осуществляется в специальном
+            термопаке, который не дает
             мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </li>
       </ul>
@@ -203,14 +210,15 @@
 
     <div class="container news-wrapper">
       <article class="article">
-        <h2>Новости</h2>
-        <p>Новое в нашем блоге</p>
+        <h2 class="visually-hidden">Новости</h2>
+        <p class="article-title">Новое в нашем блоге</p>
         <p class="article-link"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
       </article>
 
       <section class="subscribe">
-        <h2>Подписка</h2>
-        <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит.
+        <h2 class="visually-hidden">Подписка</h2>
+        <p class="subscribe-info">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного,
+          что у нас происходит.
           Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru" method="POST">
           <p class="subscribe-item">
@@ -276,7 +284,7 @@
 
   <!--Попап Обратная связь-->
 
-  <section class="popup-feedback">
+  <section class="popup-feedback visually-hidden">
     <h2>Обратная связь</h2>
     <p>Мы обязательно вам ответим!</p>
     <form class="popup-feedback-form" action="https://echo.htmlacademy.ru" method="POST">
